# phenoAI

./: .codecov.yml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  SPEC.md  SSOT.md  deny.toml  justfile  tarpaulin.toml
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql.yml  coverage.yml  doc-links.yml  fr-coverage.yml  governance.yml  quality-gate.yml  release.yml  scorecard.yml  secrets-scan.yml  trufflehog.yml
crates/llm-router/: Cargo.toml
crates/llm-router/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/pheno-embedding/: Cargo.toml
crates/pheno-embedding/src/: lib.rs
docs/adr/: 0002-rust-workspace-crate-split.md  0003-anthropic-provider-scope.md  0004-local-embeddings-future.md
docs/worklogs/: GOVERNANCE.md  worklog.md
ports/: model_loader.py  registry.py
ports/adapters/: huggingface.py  local.py
ports/tests/: test_model_loader.py
tests/: llm_router_test.rs  mcp_server_test.rs  pheno_embedding_test.rs
tests/features/llm-router/: llm_routing.feature
tests/features/mcp-server/: mcp_protocol.feature
tests/features/pheno-embedding/: embedding_generation.feature
