# PhenoAI - AI/LLM Workspace
#
# Contains AI-related crates:
# - llm-router: LLM routing (inspired by litellm)
# - mcp-server: MCP protocol server
# - embedding: Embedding pipeline
[workspace]
members = [
    "crates/llm-router",
    "crates/mcp-server",
    "crates/pheno-embedding",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"

rust-version = "1.75"
[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
