[package]
name = "llm-router"
version = "0.1.0"
edition = "2024"
description = "LLM routing with multi-provider support"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls"] }
async-trait = "0.1"
tracing = "0.1"
dashmap = "7.0.0-rc2"
# tokio/sync is included via workspace tokio (full features)
