[package]
name = "pheno-embedding"
version = "0.1.0"
edition = "2024"
description = "Embedding pipeline for Pheno"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
